--- a/exercicios/aula004/ex001.html
+++ b/exercicios/aula004/ex001.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum illum, dolorum quidem modi laborum, beatae asperiores repellendus, libero sunt excepturi delectus quia necessitatibus totam amet vel fugit sed? Ut, maiores.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quos repellendus ipsum fuga consequuntur aliquid libero, quod omnis qui nesciunt magni possimus, repellat molestiae similique? Velit sunt doloribus deleniti? Tenetur.</p>
 
     <script>
