--- a/exercicios/aula006/ex002.html
+++ b/exercicios/aula006/ex002.html
@@ -7,7 +7,11 @@
     <style>
         body {
             background-color: aqua;
-            
+        }
+
+        h1 {
+            color: rgb(156, 156, 35);
+            text-align: center;
         }
     </style>
 </head>
@@ -18,7 +22,7 @@
 
     <script>
         var nome = window.prompt('qual é o seu nome?')
-        window.alert('é um grande prazer em te conheecer,' + nome)
+        window.alert('é um grande prazer em te conheecer, ' + nome + '!')
     </script>
 </body>
 </html>
