introdução ao DOM

--- a/exercicios/aula006/ex005.html
+++ b/exercicios/aula006/ex005.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>primeiros passos com dom</title>
+    <style>
+        body{
+            background-color: rgb(37, 141, 106);
+            color: white;
+            font: normal;
+        }
+    </style>
 </head>
 <body>
-  
+    <h1>Iniciando os estudos com DOM</h1>
+    <p>aqui vai o resultado</p>
+    <p>aprendendo a usar o <strong>DOM</strong>  em javascript</p>
+    <div>clique em mim</div>
+    <script>
+        
+    </script>
 </body>
 </html>
