--- a/exercicios/aula012(prática)/modelo.html
+++ b/exercicios/aula012(prática)/modelo.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>modelo de exercicio</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>titulo</h1>
+        <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div>
-            testando
+        <div id="msg">
+            
         </div>
-        <div>
-            olá
+        <div id="foto">
+            <img id="imagem" src="manha.png" alt="foto do dia">
         </div>
     </section>
     <footer>
