--- a/exercicios/aula010/ex007.html
+++ b/exercicios/aula010/ex007.html
@@ -17,14 +17,16 @@
         }
     </style>
 </head>
-<body>
+<body> 
     <h1>Somando valores</h1>
-    <input type="number" name="txtn1" id="txtn1"> + 
+    <input type="number" name="txtn1" id="txtn1"> 
+    <input type="text" name="sinal" id="sinal">
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="somar" onclick="somar()">
     <div id="res">resultado</div>
     <script>
         function somar() {
+            var sinal = window.document.getElementById('sinal')
             var tn1 = window.document.getElementById('txtn1')
             var tn2 = window.document.querySelector('input#txtn2')
             var res = window.document.getElementById('res')
