--- a/exercicios/aula014 ex/ex017/modelo.html
+++ b/exercicios/aula014 ex/ex017/modelo.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div id="msg">
-            
+        <div>
+            <p>Numero: <input type="number" name="num" id="txtn">
+               <input type="button" value="Gerar tabuada" onclick="tabuada()">
+            </p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="manha.png" alt="foto do dia">
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um numero acima.</option>
+            </select>
         </div>
     </section>
     <footer>
