--- a/exercicios/aula016 ex/ex018/modelo.html
+++ b/exercicios/aula016 ex/ex018/modelo.html
@@ -16,9 +16,9 @@
             <input type="number" name="fnum" id="fnum">
             <input type="button" value="adicionar" onclick="adicionar()"> 
             <select name="flista" id="flista" size="6"></select> 
-            <br><input type="button" value="finalizar">
+            <br><input type="button" value="finalizar" onclick="finalizar()">
         </div>
-        <div>
+        <div id="res">
             
         </div>
     </section>
